evento-clic-funciones-main

--- a/src/index.html
+++ b/src/index.html
@@ -34,31 +34,31 @@
 				<a class="submenu-label-tipo" href="#tipo">Tipo</a>
 
 				<ul class="submenu-tipo">
-				  <li><a id="normal" href="normal">Normal</a></li>
-				  <li><a id="lucha" href="lucha">Lucha</a></li>
-				  <li><a id="volador" href="volador">Volador</a></li>
-				  <li><a id="veneno" href="veneno">Veneno</a></li>
-				  <li><a id="tierra" href="tierra">Tierra</a></li>
-				  <li><a id="roca" href="rocaa">Roca</a></li>
-				  <li><a id="bicho" href="bicho">Bicho</a></li>
-				  <li><a id="fantasma" href="fantasma">Fantasma</a></li>
-				  <li><a id="acero" href="acero">Acero</a></li>
-				  <li><a id="fuego" href=fuego>Fuego</a></li>
-				  <li><a id="agua" href="agua">Agua</a></li>
-				  <li><a id="planta" href="planta">Planta</a></li>
-				  <li><a id="electrico" href="electrico">Eléctrico</a></li>
-				  <li><a id="psiquico" href="psiquico">Psíquico</a></li>
-				  <li><a id="hielo" href="hielo">Hielo</a></li>
-				  <li><a id="dragon" href="dragon">Dragón</a></li>
-				  <li><a id="hada" href="hada">Hada</a></li>
-				  <li><a id="siniestro" href="siniestro">Siniestro</a></li>
+				  <li><a class="navmenu" id="normal" href="#">Normal</a></li>
+				  <li><a class="navmenu" id="agua" data-type="Water" href="#">Agua</a></li>
+				  <li><a class="navmenu" id="lucha" href="#a">Lucha</a></li>
+				  <li><a class="navmenu" id="volador" data-type="Fly" href="#">Volador</a></li>
+				  <li><a class="navmenu" id="veneno" href="#">Veneno</a></li>
+				  <!-- <li><a id="tierra" href="#">Tierra</a></li> -->
+<!-- 				  <li><a id="roca" href="#">Roca</a></li>
+				  <li><a id="bicho" href="#">Bicho</a></li>
+				  <li><a id="fantasma" href="#">Fantasma</a></li>
+				  <li><a id="acero" href="#">Acero</a></li>
+				  <li><a id="fuego" href="#">Fuego</a></li>
+				  <li><a id="planta" href="#">Planta</a></li>
+				  <li><a id="electrico" href="#">Eléctrico</a></li>
+				  <li><a id="psiquico" href="#">Psíquico</a></li>
+				  <li><a id="hielo" href="#">Hielo</a></li>
+				  <li><a id="dragon" href="#">Dragón</a></li>
+				  <li><a id="hada" href="#">Hada</a></li>
+				  <li><a id="siniestro" href="#">Siniestro</a></li> -->
 				</ul>
 
 			  </li> 
 
 			  <li>
 
-				<a id="top10" href="#top10">TOP 10 DE APARICIÓN</a>
+				<a id="top10" href="#">TOP 10 DE APARICIÓN</a>
 
 			  </li>
 
@@ -76,45 +76,9 @@
 
 	<main id="container" class="container">
 
-	 <!--
-		<section id="sectionHome" class="sectionCeroHome container-home">
-		  <div class="col-1">
-			<div class="row infoHome">
-				<p class="textHome">Aquí encontrarás toda la información <br/>que debes conocer para ser el mejor <br/>¡Maestro Pokemon!</p>
-			</div>
-			<div class="row buttonHome">
-			  <button id="atrapalosYa" class="buttonAtrapalosYa">¡Atrápalos Ya!</button>
-			</div>
-			<div class="row">
-				<div class="download">
-				  <h4>Descarga <br/>Pokemon GO!</h4>
-				  <div class="col buttonDownload">
-					  <img class="playStore" src="imagenes/play-store.png" alt="">
-					  <img class="appStore" src="imagenes/app-store.png" alt="">
-				  </div>
-				</div>
-				<div class="shareFriends">
-				  <h4>Comparte <br/>con tus amigos</h4>
-				  <div class="col socialButton">
-					<a href="https://pokemongolive.com/es/">
-					  <i class="fab fa-facebook-f"></i>
-					</a>
-					<a href="https://pokemongolive.com/es/">
-					  <i class="fab fa-instagram"></i>
-					</a>
-					<a href="https://pokemongolive.com/es/">
-					  <i class="fab fa-whatsapp"></i>
-					</a>
-				  </div>
-				</div>
-			</div>
-		  </div>
-		  <div class="col-2">
-		  </div>
-		</section> 
-		-->
+	 
 
-		<section id="sectionNumberOne" class="section-hide sectionOne absolute">
+		<section id="sectionNumberOne" class="sectionOne absolute">
 		  <div id="seccion-card">
 		  </div>
 		</section>
