--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,12 @@
 
 				<a class="submenu-label-tipo" href="#tipo">Tipo</a>
 
-				<ul class="submenu-tipo">
-				  <li><a class="navmenu" id="normal" href="#">Normal</a></li>
+				<ul id="submenu" class="submenu-tipo">
+				  <li><a class="navmenu" id="normal" data-type="Normal" href="#">Normal</a></li>
 				  <li><a class="navmenu" id="agua" data-type="Water" href="#">Agua</a></li>
-				  <li><a class="navmenu" id="lucha" href="#a">Lucha</a></li>
-				  <li><a class="navmenu" id="volador" data-type="Fly" href="#">Volador</a></li>
-				  <li><a class="navmenu" id="veneno" href="#">Veneno</a></li>
+				  <li><a class="navmenu" id="lucha" data-type="Fighting" href="#a">Lucha</a></li>
+				  <li><a class="navmenu" id="volador" data-type="Flying" href="#">Volador</a></li>
+				  <li><a class="navmenu" id="veneno" data-type="Poison" href="#">Veneno</a></li>
 				  <!-- <li><a id="tierra" href="#">Tierra</a></li> -->
 <!-- 				  <li><a id="roca" href="#">Roca</a></li>
 				  <li><a id="bicho" href="#">Bicho</a></li>
