--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
 		<div class="modal-content">
 
 			<div class="modal-body">
-				<p class="modal-close">X</p-->
+				<p class="modal-close"> X </p>
 				<!--<img clase="modal-close" src="imagenes/delete-button.png" alt=""style="width: 50px; vertical-align-right-top;>-->
 				<div class="modal-col col-data">
 					<p><span>Nombre: </span> <span id="pokemodal-name"></span></p>
@@ -116,12 +116,12 @@
 					</div>
 					<div id="evolution-img" class="row-evolution">
 						<div class="col-evolution col-prevEvolution">
-							<p><span>Pre-Evolución </span> <br> 
+							<p><span>Pre-Evolución </span></p> 
 							<img id="pokemodal-pre-evolution" src="#" alt="">
 						</div>
 						<div class="col-evolution col-nextEvolution">
-							<p><span>Próxima-Evolución  </span> <br> 
-							<img id="pokemodal-next-evolution" src="" alt="">
+							<p><span>Próxima-Evolución </span></p> 
+							<img id="pokemodal-next-evolution" src="#" alt="">
 						</div>
 					</div>
 				</div>
